# variator_ros1_driver

./: CMakeLists.txt  README.md  package.xml
config/: controllers.yaml  hw.yaml
include/: variator_ros_driver.hpp
include/battery/: battery_imitation.cpp  battery_imitation.hpp  battery_interface.hpp
include/led/: led_imitation.cpp  led_imitation.hpp  led_interface.hpp
include/motor/: motor_client_imitation.cpp  motor_client_imitation.hpp  motor_client_interface.hpp
include/motor_imitator/: motor_client_imitation.cpp  motor_client_imitation.hpp
include/variator/: variator_imitation.cpp  variator_imitation.hpp  variator_interface.hpp
launch/: driver.launch
msg/: VariatorStates.msg
src/: variator_ros_driver.cpp  variator_ros_driver_node.cpp
srv/: SetLed.srv  SetRatio.srv
