<?xml version="1.0"?>
<package format="2">
  <name>variator_driver</name>
  
  <version>0.0.0</version>
  <description>The variator_driver package</description>
  <maintainer email="a.pestov@rtc.ru">pestov</maintainer>
  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>roscpp</depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  


</package>

